@@ -1652,6 +1652,9 @@ sub is_adverb {my $self = shift; return $self->contains('pos', 'adv');}
 =method is_article()
 =cut
 sub is_article {my $self = shift; return $self->contains('prontype', 'art');}
+=method is_common_gender()
+=cut
+sub is_common_gender {my $self = shift; return $self->contains('gender', 'com');}
 =method is_comparative()
 =cut
 sub is_comparative {my $self = shift; return $self->contains('degree', 'comp');}
@@ -1664,6 +1667,9 @@ sub is_coordinator {my $self = shift; return $self->is_conjunction() && $self->c
 =method is_dual()
 =cut
 sub is_dual {my $self = shift; return $self->contains('number', 'dual');}
+=method is_feminine()
+=cut
+sub is_feminine {my $self = shift; return $self->contains('gender', 'fem');}
 =method is_finite_verb()
 =cut
 sub is_finite_verb {my $self = shift; return $self->contains('verbform', 'fin');}
@@ -1679,6 +1685,12 @@ sub is_infinitive {my $self = shift; return $self->contains('verbform', 'inf');}
 =method is_interjection()
 =cut
 sub is_interjection {my $self = shift; $self->contains('pos', 'int');}
+=method is_masculine()
+=cut
+sub is_masculine {my $self = shift; return $self->contains('gender', 'masc');}
+=method is_neuter()
+=cut
+sub is_neuter {my $self = shift; return $self->contains('gender', 'neut');}
 =method is_numeral()
 =cut
 sub is_numeral {my $self = shift; return $self->contains('pos', 'num') || $self->numtype() ne '';}
